kubernetes-security/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: staticweb
  namespace: homework
  labels:
    app.kubernetes.io/name: staticweb
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: staticweb
  ports:
  - name: static-web-svc-port
    protocol: TCP
    port: 8000
    targetPort: staticweb-port
