kubernetes-security/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework3
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($uri ~* "^/homepage$") {
        rewrite /homepage /index.html last;
      }
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: staticweb
      port:
        number: 8000
  rules:
  - host: homework.otus
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: staticweb
            port:
              number: 8000
